k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svart-qms
  namespace: react-pwa
spec:
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: svart-qms
