k8s/amcart-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amcart-backend
  namespace: amcart-backend
  labels:
    app: amcart-backend
spec:
  selector:
    app: amcart-backend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  type: ClusterIP
