k8s/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: svart-qms
  namespace: react-pwa
spec:
  podSelector:
    matchLabels:
      app: svart-qms             
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: istio-ingressgateway
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
    ports:
      - protocol: TCP
        port: 80
  policyTypes:
    - Ingress
