k8s/amcart-server.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: svart-qms
  namespace: react-pwa
spec:
  podSelector:
    matchLabels:
      app: svart-qms             
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: istio-ingressgateway
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
    ports:
      - protocol: TCP
        port: 80
  policyTypes:
    - Ingress
---
apiVersion: v1
kind: Service
metadata:
  name: svart-qms
  namespace: react-pwa
spec:
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: svart-qms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svart-qms
  namespace: react-pwa
  labels:
    app: svart-qms
spec:
  replicas: 1
  selector:
    matchLabels:
        app: svart-qms
  template:
    metadata:
      labels:
        app: svart-qms
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - image: anubhavv09/pwa-frontend-app:latest
        name: svart-qms
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
